# solving-nine-mens-morris

./: .gitignore  Cargo.toml  README.md  RESULTS.md  design-nn.md  design-opening-phase.md  design.md  getting-started.md  implementation-nn.md  implementation-opening-phase.md  implementation.md  p1.time  p2.time  placement.out  readme-agent.md  readme-database.md  ui-design.md  ui-implementation.md
benches/: core.rs
ml/: .gitignore  README.md  RESULTS-nn.md  pyproject.toml
ml/cache/: db-stats-partial.txt
ml/nmm/: __init__.py  board.py  consistency.py  dataset.py  db.py  evaluate.py  export.py  features.py  model.py  movegen.py  ranking.py  symmetry.py  train.py
ml/tests/: test_board.py  test_consistency.py  test_dataset.py  test_db.py  test_evaluate.py  test_export.py  test_export_model.py  test_movegen.py  test_ranking.py  test_symmetry.py  test_train.py
src/: board.rs  index.rs  lib.rs  main.rs  movegen.rs  opening.rs  opening_cache.rs  oracle.rs  orchestrate.rs  persist.rs  play.rs  pos.rs  retro.rs  server.rs  symmetry.rs  verify.rs
ui/: index.html
web/: .gitignore  package-lock.json  package.json  tsconfig.json
web/public/: index.html
web/scripts/: browser_smoke.mjs  browser_smoke_full.mjs  engine_smoke.mjs  serve.mjs
web/src/: board.ts  coords.ts  demo.ts  engine.ts  nn.ts  placement.ts  provider.ts  rules.ts  symmetry.ts  verify_fixtures.ts  verify_golden.ts
