[package]
name = "ninemm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ninemm"
path = "src/main.rs"

[lib]
name = "ninemm"
path = "src/lib.rs"

[dependencies]
rayon = "1"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true

[[bench]]
name = "core"
harness = false
