[project]
name = "nmm"
version = "0.1.0"
description = "Neural compression of the Nine Men's Morris solved database"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "onnx>=1.16",
  "onnxscript>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "tensorboard>=2.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nmm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: full-scan / large-sample gates (minutes, not seconds) -- run explicitly, not on every edit",
]
